--- a/src/app/complete/complete.component.html
+++ b/src/app/complete/complete.component.html
@@ -1,15 +1,6 @@
 <mat-card>
-  <mat-card-title>Order Complete</mat-card-title>
+  <mat-card-title>Response</mat-card-title>
   <mat-card-content>
-    <mat-list>
-      <mat-list-item>
-        <span fxFlex>Order ID</span>
-        <span fxFlex>
-            <mat-form-field>
-                <input matInput placeholder="Order ID" [(ngModel)]="orderId" disabled>
-              </mat-form-field>
-        </span>
-      </mat-list-item>
-    </mat-list>
+    <pre>{{response | json}}</pre>
   </mat-card-content>
 </mat-card>
