--- a/src/app/payment/credit-card/credit-card.component.html
+++ b/src/app/payment/credit-card/credit-card.component.html
@@ -2,13 +2,13 @@
   <mat-card-title>Credit Card</mat-card-title>
   <mat-card-content fxLayout="column">
     <mat-form-field>
-      <input matInput placeholder="Number" [(ngModel)]="paymentService.creditCard.number" (change)="setLocalStorage()" [disabled]="disableInputs">
+      <input matInput placeholder="Number" [(ngModel)]="paymentService.creditCard.number" [disabled]="disableInputs">
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="ExpDate" [(ngModel)]="paymentService.creditCard.expdate" (change)="setLocalStorage()" [disabled]="disableInputs">
+      <input matInput placeholder="ExpDate" [(ngModel)]="paymentService.creditCard.expdate" [disabled]="disableInputs">
     </mat-form-field>
     <mat-form-field>
-      <input matInput placeholder="Cvv" [(ngModel)]="paymentService.creditCard.cvv" (change)="setLocalStorage()" [disabled]="disableInputs">
+      <input matInput placeholder="Cvv" [(ngModel)]="paymentService.creditCard.cvv" [disabled]="disableInputs">
     </mat-form-field>
   </mat-card-content>
   <mat-card-actions>
